# appimage

./: .bumpversion.cfg  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml  requirements.in
.github/workflows/: python-package.yml
appimage/: __init__.py  __main__.py  appstarter.py  utils.py
